<resources>
    <string name="app_name" translatable="false">AL0</string>
    <string name="main_activity_label" translatable="false">MainActivity</string>
    <string name="main_activity_status_battery" translatable="false">▲</string>
    <string name="main_activity_status_battery_almost_empty" translatable="false">△</string>
    <string name="main_activity_status_battery_empty" translatable="false">⚠</string>
    <string name="main_activity_status_battery_charging" translatable="false">~</string>
    <string name="main_activity_status_signal_no_sim" translatable="false">NO SIM</string>
    <string name="main_activity_status_signal_airplane_mode">AIRPLANE MODE</string>
    <string name="main_activity_status_silent_mode">SILENT</string>
    <string name="main_activity_menu_list_tools_title">Tools</string>
    <string name="main_activity_menu_list_apps_title">Apps</string>
    <string name="main_activity_menu_list_phone">Phone</string>
    <string name="main_activity_menu_list_calendar">Calendar</string>
    <string name="main_activity_menu_list_clock">Clock</string>
    <string name="main_activity_menu_list_camera">Camera</string>
    <string name="main_activity_menu_list_torch">Torch</string>
    <string name="main_activity_menu_list_hotspot">Hotspot</string>
    <string name="main_activity_menu_list_calculator">Calculator</string>
    <string name="main_activity_menu_list_settings">Settings</string>
    <string name="main_activity_intro_step1_title">1/4 – Welcome.</string>
    <string name="main_activity_intro_step1_body">AL0 is an application launcher designed to declutter your smartphone.
        \n\nFollow the next screens to setup and use AL0.
    </string>
    <string name="main_activity_intro_step1_continue_button">Continue</string>
    <string name="main_activity_intro_step2_title">2/4 – A quiet tool.</string>
    <string name="main_activity_intro_step2_body">Notifications are annoying, addictive and invasive. AL0 uses Notification access to quiet them.
        \n\nDo you want to grant Notification access to AL0?
    </string>
    <string name="main_activity_intro_step2_yes_button">Yes</string>
    <string name="main_activity_intro_step2_no_button">No</string>
    <string name="main_activity_intro_step3_title">3/4 – Your phone.</string>
    <string name="main_activity_intro_step3_body">AL0 turns your smartphone into a minimalist device that supports phone calls, sms and a few other features.
        \n\nTo make AL0 works correctly it must be your default phone and messaging app.
        \n\nDo you want AL0 to be the default phone and messaging app?
    </string>
    <string name="main_activity_intro_step3_yes_button">Yes</string>
    <string name="main_activity_intro_step3_no_button">No</string>
    <string name="main_activity_intro_step4_title">4/4 – Essential mode.</string>
    <string name="main_activity_intro_step4_body">AL0 do one thing at a time, activate pin screen to keep external running apps from interfering your experience.
        \n\nDo you want to pin screen AL0?
    </string>
    <string name="main_activity_intro_step4_yes_button">Yes</string>
    <string name="main_activity_intro_step4_no_button">No</string>
    <string name="dialer_activity_label" translatable="false">DialerActivity</string>
    <string name="call_activity_label" translatable="false">CallActivity</string>
    <string name="call_activity_label_out_calling">↖ Calling…</string>
    <string name="call_activity_label_in_calling">↘ Incoming Call</string>
    <string name="call_activity_label_in_call">In Call</string>
    <string name="call_activity_label_in_call_in">↘ In Call</string>
    <string name="call_activity_label_in_call_out">↖ In Call</string>
    <string name="call_activity_button_answer">Answer</string>
    <string name="call_activity_button_numpad">Numpad</string>
    <string name="call_activity_button_speaker">Speaker</string>
    <string name="call_activity_button_bluetooth">Bluetooth</string>
    <string name="call_activity_button_mute">Mute</string>
    <string name="call_activity_button_silent">Silent</string>
    <string name="call_activity_button_hangup">Hangup</string>
    <string name="phone_contacts_new_activity_label" translatable="false">PhoneContactsNewActivity</string>
    <string name="phone_contacts_new_activity_label_number">Enter number</string>
    <string name="phone_contacts_new_activity_label_name">Enter name</string>
    <string name="phone_contacts_new_activity_button_cancel">Cancel</string>
    <string name="phone_contacts_new_activity_button_enter_name">Enter Name</string>
    <string name="phone_contacts_new_activity_button_save">Save</string>
    <string name="phone_contacts_new_activity_button_delete" translatable="false">⌫</string>
    <string name="phone_activity_label" translatable="false">PhoneActivity</string>
    <string name="phone_activity_button_numpad">Numpad</string>
    <string name="phone_activity_button_contacts">Contacts</string>
    <string name="phone_activity_button_activity">Activity</string>
    <string name="phone_contact_activity_label" translatable="false">PhoneContactActivity</string>
    <string name="phone_contact_activity_button_back">Back</string>
    <string name="phone_contact_activity_button_add_contact">Add Contact</string>
    <string name="phone_contact_activity_button_delete_contact">Delete Contact</string>
    <string name="phone_contact_activity_button_sms">Sms</string>
    <string name="phone_contact_activity_button_call">Call</string>
    <string name="phone_contact_activity_button_delete_item">Delete</string>
    <string name="phone_contact_activity_button_delete_all_items">Delete All</string>
    <string name="phone_contact_activity_button_selected_sms_copy">Copy</string>
    <string name="phone_contact_activity_time_now">NOW</string>
    <string name="phone_contact_activity_time_today">TODAY</string>
    <string name="phone_contact_activity_label_new_contact">Unknown contact</string>
    <string name="phone_contact_activity_label_no_activity">No recent activity</string>
    <string name="phone_contact_activity_dialog_delete_item_title">Delete.</string>
    <string name="phone_contact_activity_dialog_delete_item_body">Do you want to delete the selected item?</string>
    <string name="phone_contact_activity_dialog_delete_all_title">Delete.</string>
    <string name="phone_contact_activity_dialog_delete_all_body">Do you want to delete all the items?</string>
    <string name="phone_contact_activity_dialog_delete_contact_title">Delete.</string>
    <string name="phone_contact_activity_dialog_delete_contact_body">Do you want to delete the selected contact?</string>
    <string name="phone_contact_activity_dialog_delete_button">Delete</string>
    <string name="phone_contact_activity_dialog_cancel_button">Cancel</string>
    <string name="clock_activity_label" translatable="false">ClockActivity</string>
    <string name="clock_activity_button_clock">Alarm</string>
    <string name="clock_activity_button_stopwatch">Stopwatch</string>
    <string name="clock_activity_button_timer">Timer</string>
    <string name="clock_set_alarm_activity_label" translatable="false">ClockSetAlarmActivity</string>
    <string name="clock_set_alarm_activity_button_set">Set</string>
    <string name="clock_set_alarm_activity_button_cancel">Cancel</string>
    <string name="clock_set_alarm_activity_button_delete" translatable="false">⌫</string>
    <string name="clock_set_alarm_activity_postfix_am" translatable="false">&#160;AM</string>
    <string name="clock_set_alarm_activity_postfix_pm" translatable="false">&#160;PM</string>
    <string name="clock_alarm_ring_activity_label_alarm">Alarm</string>
    <string name="clock_alarm_ring_activity_button_stop">Stop</string>
    <string name="clock_timer_add_timer_activity_no_timer_set">No timer set</string>
    <string name="clock_timer_add_timer_activity_button_start">Start</string>
    <string name="clock_timer_add_timer_activity_button_cancel">Cancel</string>
    <string name="clock_timer_ring_activity_label_timer">Timer</string>
    <string name="clock_timer_ring_activity_button_stop">Stop</string>
    <string name="camera_activity_button_take_photo">Take photo</string>
    <string name="camera_activity_button_take_video">Take video</string>
    <string name="camera_activity_button_stop_video">Stop video</string>
    <string name="camera_activity_button_use_front_camera">Use front camera</string>
    <string name="camera_activity_button_use_back_camera">Use back camera</string>
    <string name="camera_activity_button_flash_auto">Flash auto</string>
    <string name="camera_activity_button_flash_no">No Flash</string>
    <string name="calculator_activity_button_clear">Clear</string>
    <string name="calculator_activity_error_message">Error</string>
    <string name="calendar_activity_button_previous_month_prefix" translatable="false">←&#160;</string>
    <string name="calendar_activity_button_next_month_prefix" translatable="false">→&#160;</string>
    <string name="settings_activity_menu_about_phone">About this phone</string>
    <string name="settings_activity_menu_sound">Sound &amp; notifications</string>
    <string name="settings_activity_menu_camera">Camera settings</string>
    <string name="settings_activity_menu_hotspot">Hotspot</string>
    <string name="settings_activity_menu_keep_lock">Essential mode</string>
    <string name="settings_activity_menu_all_settings">All settings</string>
    <string name="settings_activity_menu_dark_mode">Dark mode</string>
    <string name="settings_activity_menu_settings_tools">Tools &amp; apps settings</string>
    <string name="settings_activity_menu_settings_tools_focus">Tools settings</string>
    <string name="settings_activity_menu_exit">Exit AL0</string>
    <string name="settings_activity_button_set">Set</string>
    <string name="settings_activity_button_up">Up</string>
    <string name="settings_activity_button_down">Down</string>
    <string name="settings_activity_menu_sound_phone_volume">Phone Volume</string>
    <string name="settings_activity_menu_sound_ringtone">Ringtone</string>
    <string name="settings_activity_menu_sound_alarm">Alarm</string>
    <string name="settings_activity_menu_sound_notifications">Notifications</string>
    <string name="settings_activity_menu_sound_silent_mode">Do not disturb</string>
    <string name="settings_activity_menu_sound_vibration">Vibration</string>
    <string name="about_phone_activity_app_version_label">AL0 version</string>
    <string name="about_phone_activity_phone_manufacturer_label">Phone manufacturer</string>
    <string name="about_phone_activity_phone_model_label">Phone model</string>
    <string name="about_phone_activity_android_version_label">Android version</string>
    <string name="fragment_phone_contacts_button_find">Find</string>
    <string name="fragment_phone_contacts_button_new">New</string>
    <string name="fragment_clock_clock_button_set">Set</string>
    <string name="fragment_clock_clock_button_delete">Delete</string>
    <string name="fragment_clock_clock_no_alarm_set">No Alarm Set</string>
    <string name="fragment_clock_stopwatch_button_start">Start</string>
    <string name="fragment_clock_stopwatch_button_stop">Stop</string>
    <string name="fragment_clock_stopwatch_button_reset">Reset</string>
    <string name="fragment_clock_timer_button_add">Add</string>
    <string name="fragment_clock_timer_button_delete">Delete</string>
    <string name="close_symbol" translatable="false">◅</string>
    <string name="close_contestual_symbol" translatable="false">▽</string>
    <string name="external_link_symbol" translatable="false">⬒</string>
    <string name="logo_mountain" translatable="false">▲\n~</string>
    <string name="logo_name" translatable="false">FUJI\nCOMPUTER</string>
    <string name="logo_app_version" translatable="false">0.7.0</string>
</resources>