<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/clock_fragment__wrapper">
    <LinearLayout
        style="@style/fill_until_footer"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            style="@style/text_input_centered"
            android:id="@+id/fragment_clock_clock_current_time_label"
            />
        <TextView
            style="@style/call_activity__call_status_label"
            android:id="@+id/fragment_clock_clock_current_alarm_label"
            android:text="@string/fragment_clock_clock_no_alarm_set"
            />
        <View style="@style/spacer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/constraint_footer_wrapper"
        style="@style/constraint_footer_wrapper">
        <LinearLayout style="@style/activity_menu_footer_line">
            <computer.fuji.al0.components.Button
                style="@style/button_full_width"
                android:id="@+id/fragment_clock_clock_button_delete"
                android:text="@string/fragment_clock_clock_button_delete" />
        </LinearLayout>
        <LinearLayout style="@style/activity_menu_footer_line">
            <computer.fuji.al0.components.Button
                style="@style/button_full_width"
                android:id="@+id/fragment_clock_clock_button_set"
                android:text="@string/fragment_clock_clock_button_set" />
        </LinearLayout>
        <LinearLayout style="@style/activity_menu_footer_line">
            <computer.fuji.al0.components.Button
                style="@style/button_back"
                android:id="@+id/clock_activity_close_button"
                android:text="@string/close_symbol" />
            <View style="@style/activity_menu_footer_spacer_small"/>
            <computer.fuji.al0.components.Button
                android:id="@+id/clock_activity_alarm_button"
                style="@style/button"
                android:text="@string/clock_activity_button_clock" />
            <View style="@style/activity_menu_footer_spacer"/>
            <computer.fuji.al0.components.Button
                android:id="@+id/clock_activity_stopwatch_button"
                style="@style/button"
                android:text="@string/clock_activity_button_stopwatch" />
            <View style="@style/activity_menu_footer_spacer"/>
            <computer.fuji.al0.components.Button
                android:id="@+id/clock_activity_timer_button"
                style="@style/button"
                android:text="@string/clock_activity_button_timer" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
