<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/constraint_wrapper_fill_until_footer"
        tools:ignore="MissingConstraints">
        <LinearLayout
            style="@style/constraint_wrapper_fill_until_footer__linear_layout"
            android:gravity="top">
            <TextView
                style="@style/call_activity__call_status_label"
                android:id="@+id/clock_timer_no_timer_label"
                android:paddingTop="48dp"
                android:text="@string/clock_timer_add_timer_activity_no_timer_set"
                android:visibility="gone"
                />
            <RelativeLayout
                android:id="@+id/clock_timer_list_wrapper"
                style="@style/clock_timer_fragment__list_wrapper">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/clock_timer_list"
                    style="@style/clock_timer_fragment__list" />
                <View style="@style/fade_to_color5_up_down" />
                <View style="@style/fade_to_color5_down_up__tall" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/constraint_footer_wrapper"
        style="@style/constraint_footer_wrapper">
        <LinearLayout style="@style/activity_menu_footer_line">
            <computer.fuji.al0.components.Button
                style="@style/button_full_width"
                android:id="@+id/fragment_clock_timer_button_delete"
                android:text="@string/fragment_clock_timer_button_delete" />
        </LinearLayout>
        <LinearLayout style="@style/activity_menu_footer_line">
            <computer.fuji.al0.components.Button
                style="@style/button_full_width"
                android:id="@+id/fragment_clock_timer_button_add"
                android:text="@string/fragment_clock_timer_button_add" />
        </LinearLayout>
        <LinearLayout style="@style/activity_menu_footer_line">
            <computer.fuji.al0.components.Button
                style="@style/button_back"
                android:id="@+id/clock_activity_close_button"
                android:text="@string/close_symbol" />
            <View style="@style/activity_menu_footer_spacer_small"/>
            <computer.fuji.al0.components.Button
                android:id="@+id/clock_activity_alarm_button"
                style="@style/button"
                android:text="@string/clock_activity_button_clock" />
            <View style="@style/activity_menu_footer_spacer"/>
            <computer.fuji.al0.components.Button
                android:id="@+id/clock_activity_stopwatch_button"
                style="@style/button"
                android:text="@string/clock_activity_button_stopwatch" />
            <View style="@style/activity_menu_footer_spacer"/>
            <computer.fuji.al0.components.Button
                android:id="@+id/clock_activity_timer_button"
                style="@style/button"
                android:text="@string/clock_activity_button_timer" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
