<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout style="@style/fill_until_footer">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/phone_activity_activity_list"
            style="@style/phone_activity_activity__list" />
        <View style="@style/fade_to_color5_up_down" />
        <View style="@style/fade_to_color5_down_up__tall" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/constraint_footer_wrapper"
        style="@style/constraint_footer_wrapper">
        <LinearLayout style="@style/activity_menu_footer_line">
            <computer.fuji.al0.components.Button
                style="@style/button_back"
                android:id="@+id/phone_activity_close_button"
                android:text="@string/close_symbol" />
            <View style="@style/activity_menu_footer_spacer_small"/>
            <computer.fuji.al0.components.Button
                style="@style/button"
                android:id="@+id/phone_activity_numpad_button"
                android:text="@string/phone_activity_button_numpad" />
            <View style="@style/activity_menu_footer_spacer"/>
            <computer.fuji.al0.components.Button
                style="@style/button"
                android:id="@+id/phone_activity_contacts_button"
                android:text="@string/phone_activity_button_contacts" />
            <View style="@style/activity_menu_footer_spacer"/>
            <computer.fuji.al0.components.Button
                style="@style/button"
                android:id="@+id/phone_activity_activity_button"
                android:text="@string/phone_activity_button_activity" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
